# chess_game

./: CMakeLists.txt  Makefile  README.md
include/: Bishop.h  Board.h  Chess.h  Frame.h  Globals.h  King.h  Knight.h  Pawn.h  Piece.h  PieceFactory.h  Point.h  Queen.h  Rook.h  Ui.h
src/: Bishop.cpp  Board.cpp  Frame.cpp  Globals.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Point.cpp  Queen.cpp  Rook.cpp  Ui.cpp  main.cpp
